<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/CLayoutCS"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/TVResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00009688"
            android:fontFamily="sans-serif-condensed"
            android:shadowColor="#711313"
            android:text="@string/title"
            android:textColor="#BA1616"
            android:textColorHighlight="#771212"
            android:textSize="30sp"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:id="@+id/ETNum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/num1"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="37dp"
            app:layout_constraintTop_toBottomOf="@+id/TVResult" />

    <EditText
            android:id="@+id/ETNum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/num2"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/ETNum1" />

    <Button
            android:id="@+id/BtnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#703A3A"
            android:text="@string/calculate"
            android:textColorHighlight="#AC2424"
            android:textColorLink="#651717"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/ETNum2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
            android:id="@+id/CBRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="92dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="44dp" />

    <CheckBox
            android:id="@+id/CBGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="92dp"
            app:layout_constraintStart_toEndOf="@+id/CBRed"
            android:layout_marginStart="69dp"
            app:layout_constraintEnd_toStartOf="@+id/CBBlue"
            android:layout_marginEnd="75dp" />

    <CheckBox
            android:id="@+id/CBBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="92dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="36dp" />

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="172dp"
            android:layout_height="112dp"
            android:outlineAmbientShadowColor="@color/cardview_dark_background"
            app:srcCompat="@drawable/_63355"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>