<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
            android:id="@+id/profile3"
            android:layout_width="26dp"
            android:layout_height="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/profile"
            android:textAppearance="@style/home"
            android:gravity="top"

            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp" />

    <TextView
            android:id="@+id/explore3"
            android:layout_width="29dp"
            android:layout_height="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/explore"
            android:textAppearance="@style/home"
            android:gravity="top"

            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toStartOf="@+id/profile3"
            android:layout_marginEnd="72dp" />

    <TextView
            android:id="@+id/notificatio3"
            android:layout_width="44dp"
            android:layout_height="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/notificatio"
            android:textAppearance="@style/home"
            android:gravity="top"

            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toStartOf="@+id/explore3"
            android:layout_marginEnd="65dp" />

    <TextView
            android:id="@+id/home3"
            android:layout_width="23dp"
            android:layout_height="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/home"
            android:textAppearance="@style/home"
            android:gravity="top"

            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp"
            app:layout_constraintEnd_toStartOf="@+id/notificatio3"
            android:layout_marginEnd="65dp" />

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/group_79"
            android:id="@+id/imageView12"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/home3"
            app:layout_constraintEnd_toStartOf="@+id/imageView13"
            android:layout_marginEnd="64dp" />

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/group_30"
            android:id="@+id/imageView13"

            android:layout_marginBottom="11dp"
            app:layout_constraintBottom_toTopOf="@+id/notificatio3"
            app:layout_constraintEnd_toStartOf="@+id/imageView14"
            android:layout_marginEnd="77dp" />

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/group_19"
            android:id="@+id/imageView14"

            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/explore3"
            app:layout_constraintEnd_toStartOf="@+id/imageView15"
            android:layout_marginEnd="62dp" />

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/img"
            android:id="@+id/imageView15"

            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintBottom_toTopOf="@+id/profile3" />

    <ImageView
            android:layout_width="79dp"
            android:layout_height="75dp"
            app:srcCompat="@drawable/img"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="28dp"
            android:layout_marginStart="36dp" />

    <TextView
            android:id="@+id/poisondarte2"
            android:layout_width="199dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/poisondarte"
            android:textAppearance="@style/poisondarte"
            android:gravity="top"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="56dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="164dp" />

    <TextView
            android:id="@+id/fformtitle"
            android:layout_width="161dp"
            android:layout_height="29dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/feedback_form"
            android:textAppearance="@style/poisondarte"
            android:gravity="top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3"
            android:layout_marginTop="16dp" />

    <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top" />

    <View
            android:id="@+id/divider3"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            tools:layout_editor_absoluteX="1dp"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
            android:text="@string/rate"
            android:layout_width="316dp"
            android:layout_height="33dp"
            android:id="@+id/textView"
            android:textAppearance="@style/feedbacktext"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/fformtitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" />

    <TextView
            android:text="@string/recommend"
            android:layout_width="316dp"
            android:layout_height="33dp"
            android:id="@+id/textView2"
            android:textAppearance="@style/feedbacktext"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <TextView
            android:text="@string/suggestion"
            android:layout_width="316dp"
            android:layout_height="33dp"
            android:id="@+id/textView3"
            android:textAppearance="@style/feedbacktext"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
            android:layout_width="58dp"
            android:layout_height="96dp"
            android:orientation="vertical"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:id="@+id/radioGroup">

        <RadioButton
                android:id="@+id/yesradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

        <RadioButton
                android:id="@+id/noradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
    </RadioGroup>

    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
            android:text="@string/submit"
            android:layout_width="103dp"
            android:layout_height="39dp"
            android:id="@+id/button3"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="28dp" />

    <EditText
            android:layout_width="365dp"
            android:layout_height="121dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editTextTextMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            android:layout_marginStart="9dp" />


</androidx.constraintlayout.widget.ConstraintLayout>