<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/poisondarte"
            android:layout_width="199dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/poisondarte"
            android:textAppearance="@style/poisondarte"
            android:gravity="top"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="32dp" />

    <TextView
            android:id="@+id/jc_chuan"
            android:layout_width="128dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/jc_chuan"
            android:textAppearance="@style/jc_chuan"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@+id/poisondarte"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="32dp" />

    <TextView
            android:id="@+id/currently_s"
            android:layout_width="207dp"
            android:layout_height="38dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/currently_s"
            android:textAppearance="@style/currently_s"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@+id/jc_chuan"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="32dp" />

    <ImageView
            android:layout_width="119dp"
            android:layout_height="112dp"
            app:srcCompat="@drawable/img"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="28dp"
            android:layout_marginStart="36dp" />

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/img"
            android:id="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="56dp" />

    <TextView
            android:id="@+id/following_4"
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/following_4"
            android:textAppearance="@style/followers_6"
            android:gravity="center_horizontal|top"
            app:layout_constraintStart_toEndOf="@+id/followers_6"
            android:layout_marginStart="52dp"
            app:layout_constraintTop_toBottomOf="@+id/currently_s" />

    <TextView
            android:id="@+id/followers_6"
            android:layout_width="61dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/followers_6"
            android:textAppearance="@style/followers_6"
            android:gravity="center_horizontal|top"
            app:layout_constraintTop_toBottomOf="@+id/currently_s"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="52dp" />

    <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/followers_6"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/pinned"
            android:layout_width="82dp"
            android:layout_height="24dp"
            android:text="@string/pinned"
            android:textAppearance="@style/pinned"
            android:gravity="top"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:layout_marginTop="8dp" />

    <ImageView
            android:layout_width="25dp"
            android:layout_height="26dp"
            app:srcCompat="@drawable/group_12"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" />

    <RelativeLayout
            android:id="@+id/frame_18"
            android:layout_width="375dp"
            android:layout_height="90dp"
            android:clipToOutline="true"
            android:background="@drawable/frame_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinned"
            android:layout_marginTop="16dp" />

    <RelativeLayout
            android:id="@+id/frame_19"
            android:layout_width="375dp"
            android:layout_height="90dp"
            android:clipToOutline="true"
            android:background="@drawable/frame_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/frame_18" >

        <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="142dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="142dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="22dp"
                android:layout_alignParentTop="true" />
    </RelativeLayout>

    <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/frame_19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <View
            android:id="@+id/rectangle_6"
            android:layout_width="410dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/rectangle_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangle_7" />

    <View
            android:id="@+id/rectangle_8"
            android:layout_width="410dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/rectangle_6"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <View
            android:id="@+id/rectangle_7"
            android:layout_width="410dp"
            android:layout_height="56dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/rectangle_7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangle_8" />

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/group_79"
            android:id="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="56dp" />

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/group_30"
            android:id="@+id/imageView5"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            android:layout_marginEnd="76dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="56dp" />

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/group_19"
            android:id="@+id/imageView6"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="56dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView7"
            android:layout_marginEnd="68dp" />

    <TextView
            android:id="@+id/home"
            android:layout_width="23dp"
            android:layout_height="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/home"
            android:textAppearance="@style/home"
            android:gravity="top"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp" />

    <TextView
            android:id="@+id/notificatio"
            android:layout_width="44dp"
            android:layout_height="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/notificatio"
            android:textAppearance="@style/home"
            android:gravity="top"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/home"
            android:layout_marginStart="72dp" />

    <TextView
            android:id="@+id/explore"
            android:layout_width="29dp"
            android:layout_height="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/explore"
            android:textAppearance="@style/home"
            android:gravity="top"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/notificatio"
            android:layout_marginStart="72dp" />

    <TextView
            android:id="@+id/profile"
            android:layout_width="26dp"
            android:layout_height="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/profile"
            android:textAppearance="@style/home"
            android:gravity="top"
            app:layout_constraintStart_toEndOf="@+id/explore"
            android:layout_marginStart="76dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />
</androidx.constraintlayout.widget.ConstraintLayout>

